--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="sanitize.css" />
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="html-css/sanitize.css" />
+	<link rel="stylesheet" href="html-css/style.css" />
 
 </head>
 
@@ -221,7 +221,7 @@
 	<hr>
 
 
-	<script src="../database/app.js"></script>
+	<script src="./database/app.js"></script>
 	
 </body>
 
